--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "fontawesome-all.min.css";
 /*
 	Massively by HTML5 UP
 	html5up.net | @ajlkn
@@ -71,6 +72,12 @@ input, select, textarea {
 }
 
 /* Basic */
+@-ms-viewport {
+  width: device-width;
+}
+body {
+  -ms-overflow-style: scrollbar;
+}
 
 @media screen and (max-width: 480px) {
   html, body {
@@ -102,23 +109,23 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 /* Type */
 @font-face {
   font-family: "BonVivant";
-  src: url(/docs/webfonts/Bon_Vivant_Font/Bon_Vivant_Font/Bon\ Vivant\ Serif\ Bold.otf);
+  src: url(./../../../../public/webfonts/Bon_Vivant_Font/Bon_Vivant_Font/Bon\ Vivant\ Serif\ Bold.otf);
 }
 @font-face {
   font-family: "Cormorant";
-  src: url(/docs/webfonts/Cormorant/Cormorant-VariableFont_wght.ttf);
+  src: url(./../../../../public/webfonts/Cormorant/Cormorant-VariableFont_wght.ttf);
 }
 @font-face {
   font-family: "b";
-  src: url(/docs/webfonts/briquete/Briquete.otf);
+  src: url(./../../../../public/webfonts/briquete/Briquete.otf);
 }
 @font-face {
   font-family: "Raleway";
-  src: url(/docs/webfonts/Raleway/Raleway-Medium.ttf);
+  src: url(./../../../../public/webfonts/Raleway/Raleway-Medium.ttf);
 }
 @font-face {
   font-family: "Numbers";
-  src: url(/docs/webfonts/Inter/Inter-VariableFont_opsz\,wght.ttf);
+  src: url(./../../../../public/webfonts/Inter/Inter-VariableFont_opsz\,wght.ttf);
 }
 html {
   font-size: 16pt;
@@ -2664,7 +2671,7 @@ table.alt tbody tr td {
   width: 90%;
   height: 100%;
   background-color: #E5E4E0;
-  background-image: url("/docs/images/Portada.png"), url("/docs/images/bg.jpg");
+  background-image: url("../../images/Portada.png"), url("../../images/bg.jpg");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -2735,7 +2742,7 @@ body.is-preload #wrapper.fade-in:before {
   text-align: center;
   z-index: 0.5;
   min-height: 100vh;
-  background-image: url(/docs/images/Portada.png);
+  background-image: url(./../../../../public/images/Portada.png);
   background-repeat: no-repeat;
   background-position: center top;
   height: 1000px;
@@ -2744,15 +2751,15 @@ body.is-preload #wrapper.fade-in:before {
 }
 @font-face {
   font-family: "The Queen";
-  src: url(/docs/webfonts/the_queen/TheQueen-Regular.ttf);
+  src: url(./../../../../public/webfonts/the_queen/TheQueen-Regular.ttf);
 }
 @font-face {
   font-family: "Bourton";
-  src: url(/docs/webfonts/Bourton-Font/Bourton/BourtonBase.ttf);
+  src: url(./../../../../public/webfonts/Bourton-Font/Bourton/BourtonBase.ttf);
 }
 @font-face {
   font-family: "Juliette";
-  src: url(/docs/webfonts/julietta_messie/Julietta-Messie.otf);
+  src: url(./../../../../public/webfonts/julietta_messie/Julietta-Messie.otf);
 }
 #intro input,
 #intro select,
@@ -3249,7 +3256,7 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
 /* Main */
 @font-face {
   font-family: "Julieta";
-  src: url(/docs/webfonts/the_queen/TheQueen-Regular.ttf);
+  src: url(./../../../../public/webfonts/the_queen/TheQueen-Regular.ttf);
 }
 #main {
   background-color: #BFBBB3;
@@ -3997,3 +4004,4 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
   color: #fff;
 }
 
+/*# sourceMappingURL=main.css.map */
