--- a/docs/_astro/main.css
+++ b/docs/_astro/main.css
@@ -2671,7 +2671,7 @@ table.alt tbody tr td {
   width: 90%;
   height: 100%;
   background-color: #E5E4E0;
-  background-image: url("../../images/Portada.png"), url("../../images/bg.jpg");
+  background-image: url("./images/Portada.png"), url("./images/bg.jpg");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
