--- a/docs/_astro/main.css
+++ b/docs/_astro/main.css
@@ -4035,7 +4035,11 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
   padding: 10px;
   text-align: center;
   color: black;
-  border-color: white;
+  text-shadow: 
+      1px 1px 0px white, /* Sombra inferior derecha */
+      -1px -1px 0px white, /* Sombra superior izquierda */
+      -1px 1px 0px white, /* Sombra inferior izquierda */
+      1px -1px 0px white; /* Sombra superior derecha */
 }
 #Instagram .caption {
   font-size: 1.2rem;
@@ -4046,7 +4050,11 @@ body.is-preload #intro:not(.hidden) + #header + #nav {
   font-size: 2.5rem;
   font-family: "Great Vibes", cursive;
   color: black;
-  border-color: white;
+  text-shadow: 
+      1px 1px 0px white, /* Sombra inferior derecha */
+      -1px -1px 0px white, /* Sombra superior izquierda */
+      -1px 1px 0px white, /* Sombra inferior izquierda */
+      1px -1px 0px white; /* Sombra superior derecha */
 }
 
 /*# sourceMappingURL=main.css.map */
